--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Restore packages
-      run: dotnet restore --verbosity minimal
+      run: dotnet restore --verbosity diagnostic
 
     - name: Calculate package version (for release)
       if: ${{ github.event_name == 'release' }}
